--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+tsconfig.node.json
+tsconfig.json
+tsconfig.node.json
+vite.config.ts
+package-lock.json
+package.json
